[gd_scene load_steps=4 format=3 uid="uid://bfxoon8q4ff7w"]

[ext_resource type="Script" uid="uid://cep3w0m14p7kl" path="res://scripts/Main.gd" id="1_glv2v"]
[ext_resource type="Texture2D" uid="uid://djcnfw1v5vhx5" path="res://artdleAsset/topbtn.png" id="3_r0du0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uu6xs"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_glv2v")

[node name="Content" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1152, 648)
offset_left = 4.0
offset_top = 54.5
offset_right = 1156.0
offset_bottom = 702.5
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_uu6xs")

[node name="MainLayout" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayout"]
custom_minimum_size = Vector2(0, 1)
offset_left = 6.0
offset_top = -2.5
offset_right = 1206.0
offset_bottom = -1.5

[node name="TopBar" type="HBoxContainer" parent="MainLayout"]
custom_minimum_size = Vector2(0, 48)
offset_left = 6.0
offset_top = 2.5
offset_right = 1206.0
offset_bottom = 50.5
mouse_filter = 0

[node name="btnAccueil" type="Button" parent="MainLayout/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Accueil"
icon = ExtResource("3_r0du0")
icon_alignment = 1

[node name="btnPeinture" type="Button" parent="MainLayout/TopBar"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Peinture"
icon = ExtResource("3_r0du0")
icon_alignment = 1

[node name="btnAscendancy" type="Button" parent="MainLayout/TopBar"]
layout_mode = 2
text = "Ascendency"

[node name="HBoxContainer" type="HBoxContainer" parent="MainLayout/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblInspiCount" type="Label" parent="MainLayout/TopBar"]
layout_mode = 2
size_flags_horizontal = 8
text = "Inspiration : "

[node name="HBoxContainer2" type="HBoxContainer" parent="MainLayout/TopBar"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
